[package]
name = "exec"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = {version = "4.0.0-pre.4", features = ["unstable"]}
near-units = "0.1.0"
strum = "0.23"
strum_macros = "0.23"



# to de/serialize [u8; u64] arrays
[dependencies.serde-big-array]
version = "0.3.2"
default-features = false
features = ["const-generics"]

